--- a/pulse-ui/content/blogs/top-5-react-ui-library.mdx
+++ b/pulse-ui/content/blogs/top-5-react-ui-library.mdx
@@ -7,7 +7,7 @@ tags:
   - ui library
   - top 5
 author:
-  name: Arif Hossain
+  name: Rohit Vemparala
   avatar: https://pub-5f7cbdfd9ffa4c838e386788f395f0c4.r2.dev/arif.jpg
   x: ariflogs
 status: published
